<resources>
    <string name="app_name">速医Su-e</string>
    <string name="login_username">手机号</string>
    <string name="login_password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="login">登录</string>
    <string name="next_step">下一步</string>
    <string name="login_forget_possword">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="register">注册</string>
    <string name="login_tips">速医生Su-e</string>

    <string name="register_phone">申请注册的手机号为:(+86) %s</string>

    <string name="send_verifi_code">发送验证码</string>
    <string name="tips_verifi_code">请先填写手机号码</string>
    <string name="after_send_verifi_code">请%d(s)后再点击</string>

    <string name="titile_jkzx">健康资讯</string>
    <string name="title_more_hospital">更多医院</string>

    <string name="news_date_f">%s-%s-%s</string>
    <string name="hospital_distance">约%dm</string>

    <string name="login_hello">风里雨里，我们始终在这里等你！</string>
    <string name="logout_string">愿您带上健康一起前行！</string>

    <string name="perms">接下来我们需要您允许应用使用一些权限！</string>
    <string name="login_btn_text">登录\\注册</string>

    <string name="smart_check">智能确诊</string>
    <string name="smart_check_step">第 %d 题</string>
    <string name="check_result">诊断结果</string>
</resources>
