<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_20dp"
    >

    <TextView
        android:id="@+id/tv_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/padding_5dp"
        android:textSize="@dimen/textSize_14"
        android:text="@string/register_phone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/padding_5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_18"
            android:text="S-"
            />
        <EditText
            android:id="@+id/et_verifi_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/verification_code"
            />
        <TextView
            android:id="@+id/tv_send_verifi_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verifi_code"
            style="@style/tv_layout_popular_module_btn"
            android:padding="@dimen/padding_10dp"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_15dp" />
    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_15dp" />



    <TextView
        android:id="@+id/register_btn"
        style="@style/tv_layout_popular_module_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10dp"
        android:padding="@dimen/padding_15dp"
        android:text="@string/register"
        android:textSize="17sp" />

</LinearLayout>