<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/padding_20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />


    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10dp">


        <TextView
            android:id="@id/login_btn"
            style="@style/tv_layout_popular_module_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_20dp"
            android:padding="@dimen/padding_15dp"
            android:text="@string/login"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/forget_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_alignRight="@id/login_btn"
            android:layout_marginTop="@dimen/padding_15dp"
            android:text="@string/login_forget_possword"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>

