<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.hades.sue.activity.RegisterActivity">

    <cn.bingoogolapple.titlebar.BGATitleBar
        android:id="@+id/my_title_bar_register"
        style="@style/TitleBar"
        app:bgatitlebar_leftText="未知"
        app:bgatitlebar_rightDrawable="@drawable/selector_nav_pop"
        app:bgatitlebar_titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_20dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/register_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:padding="@dimen/padding_15dp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="昵称"
            android:padding="@dimen/padding_15dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_15dp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@drawable/login_button_bg"
            android:padding="@dimen/padding_15dp"
            android:text="注册"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

    </LinearLayout>

</FrameLayout>
