<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/padding_20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="@dimen/textSize_18" />

        <EditText
            android:id="@id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="phone" />



    </LinearLayout>

    <TextView
        android:id="@id/login_btn"
        style="@style/tv_layout_popular_module_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20dp"
        android:padding="@dimen/padding_15dp"
        android:text="@string/next_step"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20dp">

        <!--<TextView-->
        <!--android:id="@+id/forget_password_login"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/login_forget_possword"-->
        <!--android:textSize="13sp" />-->

        <TextView
            android:id="@id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_register"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />

    </RelativeLayout>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/padding_50dp"-->
    <!--android:text="其他登录方式"-->
    <!--android:textColor="@color/colorBlack"-->
    <!--android:textSize="15sp" />-->

    <!--<ImageView-->
    <!--android:id="@+id/wechat_login"-->
    <!--android:layout_width="@dimen/padding_30dp"-->
    <!--android:layout_height="@dimen/padding_30dp"-->
    <!--android:layout_marginTop="@dimen/margin_12dp"-->
    <!--android:src="@mipmap/ic_launcher" />-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/padding_50dp"-->
    <!--android:text="@string/login_tips"-->
    <!--android:textSize="15sp" />-->

</LinearLayout>

